@@ -6,6 +6,14 @@
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <style type="text/css">
   <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
     h3 {
       padding: 2px;
       border-left: 4px solid #FFCC00;
@@ -134,11 +142,11 @@ that's not subject of this document, refer to <a href="readme-developers.html">r
 
 <p><strong>NOTE</strong><br>
 If you don't need or can't compile <code>ShellExtensionX64.dll</code> component,
-comment or remove line:<pre>
-; 64-bit version of ShellExtension
+comment or remove line:</p>
+<pre>; 64-bit version of ShellExtension
 Source: ..\..\Build\ShellExtensionX64\ShellExtensionX64.dll; [...]
 </pre>
-from <code>WinMerge.iss</code></p>
+<p>from <code>WinMerge.iss</code></p>
 
 <h3>Running Inno Setup to create installer</h3>
 
