@@ -1,6 +1,8 @@
 2007-02-12 Tim
  PATCH: [ 1658347 ] Add note about PSDK paths and VC into dev-readme
   Developers: readme-developers.html
+ PATCH: [ 1658383 ] Use Verdana font in dev docs
+  Developers: *.html
 
 2006-12-04 Kimmo
  Update SVN URLs
